2015-07-09  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/kfile.py: changed check_valid_file_exists to recognize fifos as
   non-empty

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/functions.py: changed estimate functions to use correct letter
   abbreviations
   * sandbox/estimate_optimal_hash.py: changed to use renamed estimate 
   functions
   * sandbox/unique-kmers.py: changed to not output recommended HT args by
   default
   * tests/test_oxli_functions.py: changed to use renamed estimate functions

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/functions.py: added '--force' check to sanity check

2015-07-09  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/functions.py: moved optimization/sanity check func to oxli
   * scripts/normalize-by-median.py,oxli/build_graph.py: added
   optimization/sanity checking via oxli estimation funcs
   * tests/test_normalize_by_median.py: updated tests to cover estimation funcs

2015-07-08  Luiz Irber  <khmer@luizirber.org>

   * lib/{counting,hashbits,hashtable,labelhash,subset}.cc: print hexadecimal
   representation of the signature read from the file.

2015-07-06  Luiz Irber  <khmer@luizirber.org>

   * sandbox/collect-reads.py: Set a default value for coverage based
   on the docstring.
   * sandbox/count-kmers-single.py, tests/test_{functions,script_arguments}.py:
   Replace xrange and cStringIO (not Python 3 compatible).
   * lib/*.{hh,cc}, oxli/functions.py, tests/*.py: make format.

2015-07-05  Jacob Fenton  <bocajnotnef@gmail.com>

   * doc/whats-new-2.0.rst: added in normalize-by-median.py broken paired 
   updates

2015-07-05  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * Makefile: fix cppcheck invocation
   * khmer/_khmer.cc: switch to prefix increment for non-primitive objects,
   use a C++ cast, adjust scope
   * lib/hashtable.{hh,cc}: make copy constructor no-op explicit. adjust scope
   * lib/{ht-diff,test-HashTables,test-Parser}.cc: remove unused test code